[package]
name = "lisa"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5.20", features = ["derive", "env"] }
wasi = "0.13.3"
#wasi = { git = "https://github.com/bytecodealliance/wasi-rs", branch = "main"}
http = "1.1.0"

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true
