[package]
name = "lisa"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
waki = { git = "https://github.com/seungjin/waki.git", branch = "main", features = [
    "json",
    "multipart",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
#url = { git = "https://github.com/servo/rust-url.git", branch = "main" } #https://github.com/servo/rust-url/pull/983
url = { git = "https://github.com/servo/rust-url.git", rev = "08a326820a4a54d6a9730ecabd590942fc6b66dc" }
tiktoken-rs = "0.6.0"
clap = { version = "4.5.20", features = ["derive", "env"] }


[build]
target = "wasm32-wasip2"

# reduce wasm binary size
[profile.release]
lto = true
strip = "symbols"
